--- a/task1/main.css
+++ b/task1/main.css
@@ -35,7 +35,7 @@ header ul{
 
 header ul li{
   font-size: 14px;
-  padding: 20px 40px;;
+  padding: 20px 20px;
 }
 
 header ul li:hover{
@@ -60,6 +60,7 @@ header ul li:hover{
   max-width: 1000px;
   margin-bottom: 0;
   align-self: center;
+  padding-top: 40px;
 }
 
 .about{
@@ -70,7 +71,7 @@ header ul li:hover{
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-top: 5vw;
+  margin-top: 50px;
 }
 
 .section{
@@ -83,7 +84,6 @@ header ul li:hover{
   width: 250px;
   margin-bottom: 1vw;
   height: auto;
-  justify-content: space-around;
 }
 
 .section img{
