--- a/task1/main.css
+++ b/task1/main.css
@@ -3,13 +3,90 @@ body{
   margin: 0;
 }
 
+.small-menu{
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  top: 0;
+  left: -370px;
+  height: 100vh;
+  background-color: inherit;
+  border-right: 1px solid rgba(23, 23, 23, 0.87);
+  z-index: 9;
+  width: 270px;
+  transition: left 0.3s;
+}
+
+.small-menu ul{
+  /* padding: 5px; */
+  display: flex;
+  flex-direction: column;
+  padding-left: 0px;
+  padding-top: 35px;
+  color: rgb(238, 237, 237);
+  /* align-items: center; */
+}
+
+.small-menu ul li{
+  border-top: 1px solid  rgba(65, 65, 65, 0.73);
+  /* border-bottom: 1px solid  rgba(65, 65, 65, 0.73); */
+  padding: 13px 0;
+  padding-left: 15px;
+}
+
+.small-menu ul li i{
+  float: right;
+  padding-right: 10px;
+  font-size: 15px;
+  color: rgba(158, 157, 157, 1);
+}
+
+.search-button{
+  position: absolute;
+  left: 235px;
+  top: 10px;
+  border: none;
+  background-color: rgba(82, 82, 80, 0);
+  font-size: 15px;
+  height: 30px;
+  color: rgba(158, 157, 157, 1);
+}
+
+.search{
+  z-index: 10;
+  display: flex;
+  left: -340px;
+  position: absolute;
+  height: 50px;
+  width: 270px;
+  padding-left: 10px;
+  align-items: center;
+  transition: all 0.3s;
+}
+
+.search-input{
+  width: 250px;
+  height: 30px;
+  background-color: rgba(82, 82, 80, 0.86);
+  border: 1px solid rgba(50, 50, 50, 0.86);
+  color: rgba(158, 157, 157, 1);
+  padding-left: 3px;
+  font-size: 16px;
+}
+
+.logo{
+  /* overflow-x: hidden; */
+  transition: all 0.3s;
+  z-index: 999;
+}
 .header-container{
   display: flex;
   border-top: 4px solid #6db33f;
   background-color: #34302d;
   justify-content: center;
   align-items: center;
-  padding: 0 2%;
+  overflow: hidden;
+  /* padding-left: 2%; */
 }
 
 header{
@@ -17,7 +94,7 @@ header{
   width: 1000px;
   justify-content: flex-start;
   align-items: center;
-
+  overflow: hidden;
 }
 
 header img{
@@ -43,15 +120,51 @@ header ul li:hover{
   transition-duration: 0.3s
 }
 
+.hover{
+  background-color: #6db33f;
+}
+
 .button-more{
   color:white;
   display: none;
+}
+.button-more i{
+    overflow: hidden;
+}
+
+.big-search{
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  height: 70px;
+  top: -80px;
+  left: 0;
+  width:100%;
+  border-bottom: 1px solid rgb(214, 213, 213);
+  color: rgb(78, 78, 78);
+  background-color: rgb(255, 255, 255);
+  align-items: center;
+  transition: all 0.3s;
+  z-index: -1;
+}
+
+.big-search input{
+  width: 960px;
+  height: 90%;
+  margin-left: -10px;
+  border: none;
+  font-size: 18px;
+}
+.big-search-button{
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+  font-size: 20px;
+  height: 90%;
 }
 
 .body-container{
   display: flex;
   justify-content: center;
-  /* margin-top: 6vw; */
   padding: 2%;
 }
 .main-body{
@@ -100,21 +213,37 @@ header ul li:hover{
   border-color: rgb(70, 70, 70);
 }
 
+.footer-container{
+  display: flex;
+  justify-content: center;
+  padding: 2%;
+  background-color: #34302d;
+}
+
 footer{
   display:flex;
   flex-direction: column;
-  background-color: #34302d;
+
   color: white;
-  padding-left: 10vw;
+  width: 1000px;
+  /* padding-left: 10vw; */
   padding-bottom: 2vw;
-  margin-top: 5vw;
+  /* margin-top: 5vw; */
 }
 
 footer ul{
   display: flex;
   justify-content: space-between;
-  width: 30vw;
+  width: 400px;
   padding: 0;
+}
+
+footer ul li{
+  padding-left: 5px;
+}
+
+footer ul li:hover{
+  color: #6db33f;
 }
 
 a{
@@ -127,14 +256,16 @@ li{
 }
 
 @media screen and (max-width:1000px) {
+  .header-container{
+    border-top: none;
+  }
   .button-more{
-    margin-left: 2vw;
+    margin-left: 20px;
     display: inline-block;
     font-size: 25px;
-    /* margin-right: 10vw; */
+    transition: all 0.3s;
   }
   header{
-    margin-right: 4vw;
     justify-content: center;
   }
   header a{
