--- a/task4/src/App.css
+++ b/task4/src/App.css
@@ -22,7 +22,7 @@ body{
   display: flex;
   flex-direction: column;
   padding-left: 0px;
-  padding-top: 35px;
+  padding-top: 45px;
   color: rgb(238, 237, 237);
   /* align-items: center; */
 }
@@ -58,6 +58,7 @@ body{
   left: -340px;
   position: absolute;
   height: 50px;
+  top: 4px;
   width: 270px;
   padding-left: 10px;
   align-items: center;
@@ -87,7 +88,6 @@ body{
   align-items: center;
   overflow: hidden;
   height: 62px;
-  /* padding-left: 2%; */
 }
 
 header{
